--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':rajawali', ':examples', ':vuforia', ':wear', ':wear-example', ':vr'
+include ':rajawali', ':examples', ':butterfly' , ':vuforia', ':wear', ':wear-example', ':vr'
