--- a/ballrotate/build.gradle
+++ b/ballrotate/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
     compile project(':rajawali')
     testCompile 'junit:junit:4.12'
 //    androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.1', {
