--- a/ballrotate/src/main/AndroidManifest.xml
+++ b/ballrotate/src/main/AndroidManifest.xml
@@ -11,22 +11,24 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
+        </activity>
+
+        <activity android:name=".wallpaper.WallpaperPreferenceActivity"
+            android:label="@string/ball_rotate_settings"
+            android:screenOrientation="portrait"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity android:name=".wallpaper.WallpaperPreferenceActivity"
-            android:exported="true">
-
         </activity>
 
 
@@ -43,6 +45,14 @@
                 android:resource="@xml/moon_studio_wallpaper">
             </meta-data>
         </service>
-    </application>
 
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/app_admob_id"/>
+
+    </application>
+    <supports-screens android:largeScreens="true"
+        android:smallScreens="true"
+        android:anyDensity="true"
+        android:normalScreens="true"/>
 </manifest>
