--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ if (file('local.gradle').exists()) {
 
 buildscript {
     repositories {
+        google()
         jcenter()
         maven {
             url 'https://maven.google.com/'
@@ -13,7 +14,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.1.3'
         classpath "jp.classmethod.aws:gradle-aws-plugin:0.31"
     }
 }
@@ -21,6 +22,7 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        google()
         jcenter()
         maven {
             url 'https://maven.google.com/'
