--- a/vuforia/build.gradle
+++ b/vuforia/build.gradle
@@ -19,7 +19,7 @@ if (isReleaseBuild()) {
 
 android {
     compileSdkVersion rootProject.compileSdk
-    buildToolsVersion rootProject.buildTools
+    //buildToolsVersion rootProject.buildTools
 
     defaultConfig {
         minSdkVersion 15
