--- a/wear-example/build.gradle
+++ b/wear-example/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion rootProject.compileSdk
-    buildToolsVersion rootProject.buildTools
+   // buildToolsVersion rootProject.buildTools
 
     defaultConfig {
         applicationId "org.rajawali3d.examples"
