--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -18,7 +18,7 @@ if (isReleaseBuild()) {
 
 android {
     compileSdkVersion rootProject.compileSdk
-    buildToolsVersion rootProject.buildTools
+    //buildToolsVersion rootProject.buildTools
 
     defaultConfig {
         minSdkVersion 21
