--- a/halloween/build.gradle
+++ b/halloween/build.gradle
@@ -6,11 +6,11 @@ android {
 
 
     defaultConfig {
-        applicationId "com.tubug.wall.halloween"
+        applicationId "com.tubug.wall.halloween3d"
         minSdkVersion 19
         targetSdkVersion 27
-        versionCode 4
-        versionName "1.3"
+        versionCode 2
+        versionName "1.2"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
